<resources>
    <string name="app_name">GymTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gym Tracker</string>
    <string name="nav_header_subtitle">Track your workout</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="last_seven_day">Last Seven day data</string>
    <string name="last_seven_month">Last one Month</string>

    <string name="last_one_month_data">Last month data</string>
    <string name="last_three_month_data">Last Three month data</string>
    <string name="last_six_month_data">last six month data</string>
    <string name="last_one_year_data">last one year data</string>

    <string name="menu_last_exercise_summery">Last Summery</string>
    <string name="menu_exercise">Exercise</string>
    <string name="menu_report">Report</string>
    <string name="record">Record Exercise</string>
    <string name="add">Add</string>
    <string name="add_new">Add New</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="last_one_day">Last One day</string>
    <string name="sync">sync</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="pref_key">com.mac.gymtracker</string>
    <string name="log_out">Log out</string>
    <string name="firstName">first name</string>
    <string name="last_name">last name</string>
    <string name="accountType">AccountType</string>
    <string name="last_sync_date">Last Sync Date</string>
    <string name="confirm_password">confirm password</string>
    <string name="loading">Loading.....</string>
    <string name="last_payment_date">Last Payment Date</string>
    <string name="due_date">Due date</string>
    <string name="pause_time">Rest</string>
    <string name="forgot_password_label">Enter your email address</string>
    <string name="rest_time">Rest time</string>
</resources>